# evs-python-automation

./: README.md  mcp_server_plan.md  pyproject.toml
.github/workflows/: publish.yml
src/: evs_automation.py  evs_util.py
src/evs_automation/: __init__.py  _core.py
